# mle-parts

./: .appveyor.yml  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
Parts/actors/android/: TOCDoclet.bat  options
Parts/actors/android/com.wizzer.mle.parts.actors/: .classpath  .project  AndroidManifest.xml  actors.jardesc  actorsdoc.jardesc  javadoc.xml
Parts/actors/brender/src/: palettea.cxx  statcam.cxx
Parts/actors/common/src/: 2dimga.cxx  2dmva.cxx  2dspra.cxx  3danima.cxx  3dannoa.cxx  3dcama.cxx  3dcamera.cxx  3dchara.cxx  3ddirlta.cxx  3dgeoma.cxx  3dgeomwa.cxx  3dlighta.cxx  3dlta.cxx  3dmodela.cxx  3dpntlta.cxx  3dposa.cxx  3dsptlta.cxx  3dtransa.cxx  3dtrsa.cxx  aumidia.cxx  ausampla.cxx  escapea.cxx  evader.cxx  obstacle.cxx  pursuer.cxx  wanderer.cxx
Parts/actors/directx/Mle2dImageActor/: Mle2dImageActor.cpp  StdAfx.cpp  StdAfx.h
Parts/actors/directx/MleEscapeActor/: MleEscapeActor.cpp  stdafx.cpp
Parts/actors/java/: TOCDoclet.bat  packages
Parts/actors/java/com.wizzer.mle.parts.actors/: .classpath  .project  actors-linux.jardesc  actors.jardesc  actorsdoc-linux.jardesc  actorsdoc.jardesc  build-user.xml  javadoc-linux.xml  javadoc.xml
Parts/actors/rehearsal/Mle2dImageActor/: Mle2dImageActor.cpp  ReadMe.txt  StdAfx.cpp  StdAfx.h
Parts/actors/rehearsal/Mle3dCameraActor/: Makefile  Mle3dCameraActor.cpp  ReadMe.txt  StdAfx.cpp  StdAfx.h  leafdefs
Parts/actors/rehearsal/MleEscapeActor/: Makefile  MleEscapeActor.cpp  (+4 more)
Parts/actors/win32/: Makefile
Parts/actors/workprints/: AuMidiActor.wpa  AuMidiActor.wpd  AuSampleActor.wpa  AuSampleActor.wpd  Mle2dImgActor.wpa  Mle2dImgActor.wpd  Mle2dMvActor.wpa  Mle2dMvActor.wpd  Mle2dSpriteActor.wpa  Mle2dSpriteActor.wpd  Mle3dAnimationActor.wpa  Mle3dAnimationActor.wpd  Mle3dAnnotation.wpa  Mle3dAnnotation.wpd  Mle3dCameraActor.wpa  Mle3dCameraActor.wpd  Mle3dCharacterActor.wpa  Mle3dCharacterActor.wpd  Mle3dDirectLightActor.wpa  Mle3dDirectLightActor.wpd  Mle3dGeometryActor.wpa  Mle3dGeometryActor.wpd  Mle3dGeometryWebActor.wpa  Mle3dGeometryWebActor.wpd  Mle3dLightActor.wpa  Mle3dLightActor.wpd  Mle3dModelActor.wpa  Mle3dModelActor.wpd  Mle3dPOSActor.wpa  Mle3dPOSActor.wpd  Mle3dPointLightActor.wpa  Mle3dPointLightActor.wpd  Mle3dSpotLightActor.wpa  Mle3dSpotLightActor.wpd  Mle3dTRSActor.wpa  Mle3dTRSActor.wpd  Mle3dTransformActor.wpa  Mle3dTransformActor.wpd  MleEscapeActor.wpa  MleEscapeActor.wpd  (+14 more)
Parts/base/android/: TOCDoclet.bat  config  options
Parts/base/java/: TOCDoclet.bat  config  packages
Parts/mediaref/android/: TOCDoclet.bat  config
Parts/mediaref/brender/: Makefile  ismrules
Parts/mediaref/inventor/: MleIv2dImageMediaRef.cxx  MleIv3dColorMapMediaRef.cxx  MleIv3dModelMediaRef.cxx  MleIv3dSceneGraphMediaRef.cxx  MleIv3dTextureMapMediaRef.cxx
Parts/mediaref/java/: TOCDoclet.bat  config  options  packages
Parts/mediaref/qt/: mleqtmref.pro
Parts/mediaref/win32/: Makefile  ismdefs
Parts/props/android/: TOCDoclet.bat  config
Parts/props/java/: TOCDoclet.bat  config  options  packages
Parts/props/linux/: .autotools  .cproject  .project  AUTHORS  Makefile  Makefile.am  NEWS  README  configure.ac  ismdefs
Parts/props/linux/include/: Makefile  Makefile.am  install_manifest.txt
Parts/props/linux/workprints/: Makefile  Makefile.am  install_manifest.txt
Parts/props/win32/: Makefile  ismdefs  ismrules
Parts/props/workprints/: Mle3dAnimationRegistryProperty.wpp  Mle3dCameraAspectRatioProperty.wpp  Mle3dCameraClippingProperty.wpp  Mle3dCameraFieldOfViewProperty.wpp  Mle3dCameraTypeProperty.wpp  Mle3dCharacterRegistryProperty.wpp  Mle3dColorMapProperty.wpp  Mle3dEulerAngleRotationProperty.wpp  Mle3dGeometryRegistryProperty.wpp  Mle3dGeometryRegistryWebProperty.wpp  Mle3dLightAngleProperty.wpp  Mle3dLightDropOffRateProperty.wpp  Mle3dLightIntensityProperty.wpp  Mle3dLightSwitchProperty.wpp  Mle3dLightTypeProperty.wpp  Mle3dMaterialRegistryProperty.wpp  Mle3dModelProperty.wpp  Mle3dNodeTypeProperty.wpp  Mle3dNonuniformScaleProperty.wpp  Mle3dOrientationProperty.wpp  Mle3dPickableProperty.wpp  Mle3dPositionProperty.wpp  Mle3dQuaternionRotationProperty.wpp  Mle3dRehearsalGeometryProperty.wpp  Mle3dRenderProperty.wpp  Mle3dRenderStyleProperty.wpp  Mle3dSceneGraphProperty.wpp  Mle3dTextureMapProperty.wpp  Mle3dTextureRegistryProperty.wpp  Mle3dTransformProperty.wpp  Mle3dTranslationProperty.wpp  Mle3dUniformScaleProperty.wpp  MyOneProperty.wpp  MyThreeProperty.wpp  MyTwoProperty.wpp
Parts/roles/MleRoles/: MleRoles.dsw
Parts/roles/android/: TOCDoclet.bat  config  options
Parts/roles/java/: TOCDoclet.bat  config  options  packages
Parts/roles/qt/: mleqtrole.pro
Parts/roles/win32/: Makefile
Parts/roles/workprints/: Mle2dImgRole.wpd  Mle3dRole.wpd
Parts/sets/android/: TOCDoclet.bat  config  packages
Parts/sets/inventor/: iv2dset.cxx  iv3dset.cxx
Parts/sets/inventor/linux/Mle3dSet/runtime/: Makefile.am
Parts/sets/java/: TOCDoclet.bat  options
Parts/sets/qt/: mleqtset.pro
Parts/sets/win32/: Makefile
Parts/stages/android/: TOCDoclet.bat  config  packages
Parts/stages/inventor/: CubeDragger.cxx  CubeDragger.h  GridGraph.h  MultiSearchAction.cxx  MultiSearchAction.h  Nudger.h  Source.cxx  Source.h  SpotMarkerGraph.h  Target.cxx  Target.h  antirot.cxx  grid.iv  ivstage.cxx
Parts/stages/java/: TOCDoclet.bat  config  options
Parts/stages/qt/: mleqtstage.pro
Parts/stages/rehearsal/: Makefile
Parts/stages/win32/: Makefile
(+748 files in other folders)
