# These files will end up in the install include directory
# For example, /usr/include
includedir = $(prefix)/include/mle

include_HEADERS = \
    $(top_srcdir)/../common/include/mle/3danimrp.h \
    $(top_srcdir)/../common/include/mle/3dcamarp.h \
    $(top_srcdir)/../common/include/mle/3dcamclp.h \
    $(top_srcdir)/../common/include/mle/3dcamfvp.h \
    $(top_srcdir)/../common/include/mle/3dcamtp.h \
    $(top_srcdir)/../common/include/mle/3dcharrp.h \
    $(top_srcdir)/../common/include/mle/3dcomapp.h \
    $(top_srcdir)/../common/include/mle/3derotp.h \
    $(top_srcdir)/../common/include/mle/3dgeomrp.h \
    $(top_srcdir)/../common/include/mle/3dgeorwp.h \
    $(top_srcdir)/../common/include/mle/3dltap.h \
    $(top_srcdir)/../common/include/mle/3dltdp.h \
    $(top_srcdir)/../common/include/mle/3dltip.h \
    $(top_srcdir)/../common/include/mle/3dltsp.h \
    $(top_srcdir)/../common/include/mle/3dlttp.h \
    $(top_srcdir)/../common/include/mle/3dmatlrp.h \
    $(top_srcdir)/../common/include/mle/3dmodelp.h \
    $(top_srcdir)/../common/include/mle/3dnodetp.h \
    $(top_srcdir)/../common/include/mle/3dnscalp.h \
    $(top_srcdir)/../common/include/mle/3dpickp.h \
    $(top_srcdir)/../common/include/mle/3dqrotp.h \
    $(top_srcdir)/../common/include/mle/3drendp.h \
    $(top_srcdir)/../common/include/mle/3drgeomp.h \
    $(top_srcdir)/../common/include/mle/3drstylp.h \
    $(top_srcdir)/../common/include/mle/3dscenep.h \
    $(top_srcdir)/../common/include/mle/3dtexmpp.h \
    $(top_srcdir)/../common/include/mle/3dtextrp.h \
    $(top_srcdir)/../common/include/mle/3dtranfp.h \
    $(top_srcdir)/../common/include/mle/3dtranlp.h \
    $(top_srcdir)/../common/include/mle/3dtranrp.h \
    $(top_srcdir)/../common/include/mle/3duscalp.h \
    $(top_srcdir)/../common/include/mle/myprop1p.h \
    $(top_srcdir)/../common/include/mle/myprop2p.h \
    $(top_srcdir)/../common/include/mle/myprop3p.h \
    $(top_srcdir)/../common/include/mle/propdef.h
