# These files will end up in the install include directory
# For example, /usr/include
includedir = $(prefix)/include/workprints

include_HEADERS = \
    $(top_srcdir)/../workprints/Mle3dCameraFieldOfViewProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dCameraTypeProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dCharacterRegistryProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dColorMapProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dEulerAngleRotationProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dGeometryRegistryProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dGeometryRegistryWebProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dLightAngleProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dLightDropOffRateProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dLightIntensityProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dLightSwitchProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dLightTypeProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dMaterialRegistryProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dModelProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dNodeTypeProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dNonuniformScaleProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dOrientationProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dPickableProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dPositionProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dQuaternionRotationProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dRehearsalGeometryProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dRenderProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dRenderStyleProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dSceneGraphProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dTextureMapProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dTextureRegistryProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dTransformProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dTranslationProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dUniformScaleProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dAnimationRegistryProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dCameraAspectRatioProperty.wpp \
    $(top_srcdir)/../workprints/Mle3dCameraClippingProperty.wpp